landing page design

--- a/client/src/sass/_base.scss
+++ b/client/src/sass/_base.scss
@@ -3,7 +3,7 @@
 $Yellow: #feda6a;
 $SilverFox: #d4d4dc;
 $DeepMatteGrey: #393f4d;
-$DarkSlate: #1d1e22;
+$DarkSlate: #1c1d21;
 $RoseGold: #bd8c7d;
 
 $Raleway: 'Raleway', sans-serif;
