--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -10,3 +10,4 @@
 @import './components/mealplan';
 @import './components/notfound';
 @import './components/workoutpreview';
+@import './components/footer';
