--- a/client/src/sass/components/_landing.scss
+++ b/client/src/sass/components/_landing.scss
@@ -1,23 +1,23 @@
 .landing {
-  width: 100%;
-  height: 100vh;
-  // background-color: $DeepMatteGrey;
   background: url(../images/black.png) no-repeat;
   background-size: cover;
+  height: 100vh;
   text-align: center;
+  width: 100%;
   vertical-align: middle;
 
   .title {
     position: relative;
     top: 20%;
+    z-index: 2;
   }
   h4 {
-    top: 10%;
     color: $RoseGold;
     line-height: 30px;
-    text-transform: uppercase;
     letter-spacing: 0.6em;
     text-anchor: $Yellow;
+    text-transform: uppercase;
+    top: 10%;
   }
   h1 {
     font-family: $Raleway;
@@ -41,6 +41,7 @@
   }
 
   ul {
+    z-index: 2;
     list-style-type: none;
     font-family: $Raleway;
     position: relative;
@@ -50,9 +51,7 @@
     max-width: 580px;
     height: auto;
     padding: 10px 5px;
-    //border: 1px solid $DarkSlate;
-    //  background-color: transparent;
-    // background-color: $DarkSlate;
+
     li {
       text-align: start;
       font-weight: 700;
@@ -60,9 +59,7 @@
       margin: 3px 0;
       padding: 10px;
       border: 1px solid black;
-
       background: $DeepMatteGrey;
-      // background: transparent;
 
       a {
         font-size: 24px;
@@ -102,4 +99,23 @@
   to {
     color: black;
   }
+}
+.video1 {
+  position: absolute;
+  top: 0;
+  height: 70%;
+  border-top-left-radius: 80%;
+  border-bottom-left-radius: 15%;
+  height: 50%;
+  right: 0;
+}
+.video2 {
+  position: absolute;
+  top: 40%;
+  height: 70%;
+  border-top-left-radius: 10%;
+  border-bottom-left-radius: 80%;
+  z-index: 1;
+  height: 50%;
+  right: 0;
 }
