--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,13 +1,14 @@
 //  Top level
-@import './base';
-@import './layout';
-@import './functions';
-@import './mixins';
+@import "./base";
+@import "./layout";
+@import "./functions";
+@import "./mixins";
 
 // Components
-@import './components/dashboard';
-@import './components/landing';
-@import './components/mealplan';
-@import './components/notfound';
-@import './components/workoutpreview';
-@import './components/footer';
+@import "./components/dashboard";
+@import "./components/landing";
+@import "./components/mealplan";
+@import "./components/notfound";
+@import "./components/workoutpreview";
+@import "./components/footer";
+@import "./components/navbox";
